# PersistMemoryManager

./: .clang-format  .gitignore  .gitkeep  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  abstract__pmm_8h.html  abstract__pmm_8h_source.html  address__traits_8h.html  address__traits_8h_source.html  allocator__policy_8h.html  allocator__policy_8h_source.html  annotated.html  block_8h.html  block_8h_source.html  block__state_8h.html  block__state_8h_source.html  classes.html  classpmm_1_1AbstractPersistMemoryManager-members.html  classpmm_1_1AbstractPersistMemoryManager.html  classpmm_1_1AllocatedBlock-members.html  classpmm_1_1AllocatedBlock.html  classpmm_1_1AllocatorPolicy-members.html  classpmm_1_1AllocatorPolicy.html  classpmm_1_1BlockStateBase.html  classpmm_1_1CoalescingBlock-members.html  classpmm_1_1CoalescingBlock.html  classpmm_1_1FreeBlock.html  classpmm_1_1FreeBlockNotInAVL-members.html  classpmm_1_1FreeBlockNotInAVL.html  classpmm_1_1FreeBlockRemovedAVL.html  classpmm_1_1HeapStorage.html  classpmm_1_1MMapStorage.html  classpmm_1_1PersistMemoryManager-members.html  classpmm_1_1PersistMemoryManager.html  classpmm_1_1PersistentAvlTree-members.html  (+152 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
benchmarks/: CMakeLists.txt  bench_allocator.cpp
changelog.d/: 20260308_000000_best_practices.md  20260308_000000_issue146_index_sizes.md  20260308_120000_cpp20_migration.md  20260308_120000_pptr_avl_tree_methods.md  20260308_150000_issue126_tree_node_refactoring.md  20260308_184958_block_header_reduction.md  20260308_201442_issue138_refactoring.md  20260308_220000_issue141_remove_duplication.md  20260308_230000_issue138_release_pipeline.md  20260308_230000_issue144_code_review.md  20260309_000000_pstringview.md  20260309_120000_pmap.md  20260310_101729_issue160_deduplication.md  20260310_120000_docs_rewrite.md  20260310_120000_issue155_avl_dedup.md  20260310_120000_issue155_valid_pmm_address_traits.md  20260310_120000_issue162_avl_find_deduplication.md  20260310_120000_issue166_deduplication.md  20260310_120000_issue168_deduplication.md  20260310_120000_issue172_code_review_fixes.md  20260310_120000_issue179_remove_header_from_ptr_duplicate.md  20260310_120000_remove_redundant_pptr_tree_methods.md  20260310_172200_issue176_remove_obsolete_manager_header_fields.md  20260310_181846_issue175_manager_header_template.md  20260310_192350_issue179_blk_raw_helpers.md  20260310_200000_issue179_make_pptr_and_find_block_helpers.md  20260311_120000_issue146_rethink_configs.md  20260311_120000_pvector.md  20260311_191326_issue184_pstringview_refactoring.md  20260312_112800_issue44_plan_phase1_1.md  20260312_120000_issue188_deduplication.md  20260312_120000_issue43_phase1_safety.md  20260312_130000_issue43_phase2_persistence.md  20260319_120000_pptr_byte_offset.md  20260319_140000_catch2_migration.md  20260319_160000_parray.md  20260319_170000_pvector_erase.md  20260319_203208_reallocate_typed.md  20260319_213_extended_tests.md  20260319_error_codes.md  (+51 more)
demo/: CMakeLists.txt  avl_tree_view.cpp  avl_tree_view.h  demo_app.cpp  demo_app.h  demo_globals.cpp  demo_globals.h  main.cpp  manual_alloc_view.cpp  manual_alloc_view.h  mem_map_view.cpp  mem_map_view.h  metrics_view.cpp  metrics_view.h  scenario_manager.cpp  scenario_manager.h  scenarios.cpp  scenarios.h  struct_tree_view.cpp  struct_tree_view.h
docs/: PMM_AVL_Forest_Concept.md  abstract__pmm_8h.html  abstract__pmm_8h_source.html  address__traits_8h.html  address__traits_8h_source.html  allocator__policy_8h.html  allocator__policy_8h_source.html  annotated.html  api_reference.md  architecture.md  atomic_writes.md  avl__tree__mixin_8h.html  avl__tree__mixin_8h_source.html  block_8h.html  block_8h_source.html  block__state_8h.html  block__state_8h_source.html  block_and_treenode_semantics.md  bootstrap.md  classes.html  classpmm_1_1AbstractPersistMemoryManager-members.html  classpmm_1_1AbstractPersistMemoryManager.html  classpmm_1_1AllocatedBlock-members.html  classpmm_1_1AllocatedBlock.html  classpmm_1_1AllocatorPolicy-members.html  classpmm_1_1AllocatorPolicy.html  classpmm_1_1BlockStateBase-members.html  classpmm_1_1BlockStateBase.html  classpmm_1_1CoalescingBlock-members.html  classpmm_1_1CoalescingBlock.html  classpmm_1_1FreeBlock-members.html  classpmm_1_1FreeBlock.html  classpmm_1_1FreeBlockNotInAVL-members.html  classpmm_1_1FreeBlockNotInAVL.html  classpmm_1_1FreeBlockRemovedAVL-members.html  classpmm_1_1FreeBlockRemovedAVL.html  classpmm_1_1HeapStorage-members.html  classpmm_1_1HeapStorage.html  classpmm_1_1MMapStorage-members.html  classpmm_1_1MMapStorage.html  (+297 more)
examples/: CMakeLists.txt  basic_usage.cpp  benchmark.cpp  new_api_usage.cpp  persistence_demo.cpp  stress_test.cpp
include/: persist_avl_tree.h  persist_memory_io.h  pmm_config.h  (+6 more)
tests/: CMakeLists.txt  fuzz_allocator.cpp  issue314_build_graph_contract.cmake  test_allocate.cpp  test_avl_allocator.cpp  test_avl_tree_view.cpp  test_background_validator.cpp  test_block_modernization.cpp  test_block_state.cpp  test_coalesce.cpp  test_deallocate.cpp  test_demo_headless.cpp  test_forest_registry.cpp  test_issue100.cpp  test_issue106_block_state_integration.cpp  test_issue108_static_model.cpp  test_issue123_presets.cpp  test_issue123_sh_embedded.cpp  test_issue123_sh_industrial_db.cpp  test_issue123_sh_multi_threaded.cpp  test_issue123_sh_single_threaded.cpp  test_issue136_embedded_list_node.cpp  test_issue144_code_review.cpp  test_issue146_configs.cpp  test_issue146_index_sizes.cpp  test_issue146_sh_embedded_static.cpp  test_issue146_sh_large_db.cpp  test_issue146_sh_small_embedded_static.cpp  test_issue151_pstringview.cpp  test_issue153_pmap.cpp  test_issue160_deduplication.cpp  test_issue162_deduplication.cpp  test_issue166_deduplication.cpp  test_issue168_deduplication.cpp  test_issue170_sh_no_comments.cpp  test_issue172_code_review.cpp  test_issue175_64bit_indexes.cpp  test_issue176_manager_header.cpp  test_issue179_deduplication.cpp  test_issue186_pvector.cpp  (+68 more)
tests/cmake/: build_testing_off_excludes_tests.cmake
(+321 files in other folders)
